<resources>
    <string name="app_name">HealthyBody</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="todo">TODO</string>
    <string name="logged_in">Logged in</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome2">Welcome!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_weight">Choose your weight:</string>
    <string name="choose_your_height">Choose your height:</string>
    <string name="set_up">Set Up</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="page_1_of_2">Page 1 of 2</string>
    <string name="welcome3">Welcome!</string>
    <string name="press_next_to_set_up_your_information">Press Next to set up your information</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="todo2">TODO</string>
    <string name="enter_foods_name">Enter foods name</string>
    <string name="add">Add</string>
    <string name="carbs_0">Carbs: 0</string>
    <string name="calories_0">Calories: 0</string>
    <string name="food_name">Food Name</string>
    <string name="protein_0">Protein: 0</string>
    <string name="fat_0">Fat: 0</string>
    <string name="calories">Calories</string>
    <string name="steps">Steps</string>
    <string name="your_activity_for_today">Your Activity For Today</string>
    <string name="todo3">TODO</string>
    <string name="_0">0</string>
    <string name="step_counter">Step Counter</string>
    <string name="calories_you_ve_burned_today">Calories You\'ve Burned Today</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="activity">Activity</string>
    <string name="here_you_can_see_your_total_number_of_steps_and_calories">Here you can see your total number of steps and calories</string>
    <string name="here_you_can_add_a_meal">Here you can add a meal</string>
    <string name="meals">Meals</string>
    <string name="todo55">TODO</string>
    <string name="welcome_back2">Welcome Back</string>
    <string name="name">name</string>
    <string name="welcome_back3">Welcome Back!</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="foods_name">Foods name</string>
    <string name="fat">Fat</string>
    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="calories2">Calories</string>
    <string name="history">History</string>
</resources>