<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:stretchColumns="1,2,3,45"
    android:layout_margin="2dp"
    tools:context=".ChartActivity">

    <TableRow tools:ignore="UselessParent">

        <TextView
            android:id="@+id/foodList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/foods_name"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fatList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/fat"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/carbsList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/carbs"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/proteinList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/protein"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/caloriesList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/calories2"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </TableRow>

</TableLayout>