<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    android:layout_margin="20dp"
    app:cardUseCompatPadding="true"
    android:backgroundTint="@color/white"
    tools:context=".FoodSearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/food_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/food_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/calories_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/calories_0"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/fat_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fat_0"
                android:textColor="@color/black"
                android:textStyle="normal"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/carbs_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/carbs_0"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/protein_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/protein_0"
                android:layout_margin="5dp"/>

        </LinearLayout>

<com.google.android.material.button.MaterialButton
    android:id="@+id/add_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/add"
    android:textColor="@color/white"
    android:layout_gravity="center_vertical"
    android:backgroundTint="@color/black"
    app:icon="@drawable/ic_baseline_add_24"
    app:iconTint="@color/white"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>