<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0df22ab443662d632838fd82f6ea38b2cba025a"
    tools:context=".ChartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:textAlignment="center"/>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="60dp"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        tools:ignore="UselessParent">

        <!--Table-->
        <TableRow
            android:background="@color/lightPink"
            android:elevation="10dp"
            tools:ignore="UselessLeaf">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/foods_name"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/fat"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/carbs"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/protein"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/calories2"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/tableitemlayout"/>
    </TableLayout>

</RelativeLayout>