<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0df22ab443662d632838fd82f6ea38b2cba025a"
    android:orientation="vertical"
    tools:context=".StepCounterActivity">

    <TextView
        android:id="@+id/yourActivityForTodayView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:text="@string/your_activity_for_today"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="110dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo3"
                android:src="@drawable/activity_png_isolated_file" />


            <TextView
                android:id="@+id/nrOfSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#3F51B5"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_counter"
                android:textAlignment="center"
                android:textColor="#3F51B5" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/white"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/nrOfCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="10dp"
                android:text="@string/_0"
                android:textColor="@color/blue"
                android:textSize="30sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_local_fire_department_24"
                app:drawableTint="#3F51B5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_you_ve_burned_today"
                android:textColor="@color/blue" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>