<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0df22ab443662d632838fd82f6ea38b2cba025a"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/welcomeBckView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/welcome_back3"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


    <ImageView
        android:id="@+id/calendarView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/todo9"
        android:src="@drawable/ic_baseline_edit_calendar_24" />


    <androidx.cardview.widget.CardView
        android:id="@+id/chartInfo"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:elevation="10dp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/addMealCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:text="@string/meals"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_fastfood_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/here_you_can_add_a_meal"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/showActivityCardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="5dp"
                android:text="@string/activity"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_baseline_directions_walk_24" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/here_you_can_see_your_total_number_of_steps_and_calories"
                android:textColor="@color/black"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>