<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0df22ab443662d632838fd82f6ea38b2cba025a"
    tools:context=".SetUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/setUpview"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/set_up"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/pngegg"
                android:contentDescription="@string/todo55" />

        </LinearLayout>

        <TextView
            android:id="@+id/weightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/choose_your_weight"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/weight_picker"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:elevation="10dp"
            app:dividerColor="#FF0000" />

        <TextView
            android:id="@+id/heightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_your_height"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="10dp"/>

        <NumberPicker
            android:id="@+id/height_picker"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:layout_margin="20dp"
            android:gravity="center"

            app:dividerColor="#FF0000" />
    </LinearLayout>



</FrameLayout>